@@ -15,6 +15,8 @@
         # The management of custom "FunctionFieldResult" classes which define methods
           'for_html()/for_csv()' has been improved; these methods are now called
           by 'render()', with a warning, to facilitate code upgrade.
+        # Some issues with the populating of the test DB have been fixed.
+          For example, the 'populate' was made even if the test DB creation failed (leading to confusion).
 
 
 == Version 2.5.9 ==
